k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tesouro-fase2
  labels:
    app: tesouro-nacional-fase2
