k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fase2-frontend
  namespace: tesouro-fase2
  labels:
    app: fase2-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fase2-frontend
  template:
    metadata:
      labels:
        app: fase2-frontend
    spec:
      containers:
        - name: frontend
          image: 983004127488.dkr.ecr.us-east-1.amazonaws.com/fase2-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
