k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fase2-frontend-service
  namespace: tesouro-fase2
  labels:
    app: fase2-frontend
spec:
  selector:
    app: fase2-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
